Refactor local dev tooling and search support